force-app/main/default/objects/MS_FSM_Root_Asset_Slack_Post__e/MS_FSM_Root_Asset_Slack_Post__e.object-meta.xml
<CustomObject>
    <description>Used to create Slack Posts and Threads on Root Asset Channels.</description>
    <label>FSM Root Asset Slack Post</label>
    <pluralLabel>FSM Root Asset Slack Posts</pluralLabel>
</CustomObject>