force-app/main/default/objects/MS_FSM_Root_Asset_Slack_Post__e/fields/Root_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Root_Asset_Id__c</fullName>
    <label>Root Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>