force-app/main/default/objects/MS_FSM_Root_Asset_Slack_Post__e/fields/Service_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Id__c</fullName>
    <label>Service Appointment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>