force-app/main/default/objects/MS_FSM_Root_Asset_Slack_Post__e/fields/WorkOrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderLineItemId__c</fullName>
    <label>WorkOrderLineItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>